--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,8 +410,8 @@ h6 {
   font-weight: 500;
   font-size: 15px;
   display: inline-block;
-  padding: 8px 24px 10px 46px;
-  border-radius: 3px;
+  padding: 8px 24px 10px 25px;
+  border-radius: 19px;
   transition: 0.5s;
   color: #fff;
   background: brown;
@@ -419,7 +419,7 @@ h6 {
 }
 
 #hero .download-btn:hover {
-  background: brown;
+  background: rgba(226, 70, 70, 0.473);
 }
 
 #hero .download-btn i {
