--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1060,7 +1060,7 @@ section {
 
 .contact .php-email-form button[type=submit] {
   background: #fff;
-  border: 2px solid brown;
+  border: 2px solid white;
   padding: 10px 24px;
   color: brown;
   transition: 0.4s;
