--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,7 @@
 body {
     font-family: "Open Sans", sans-serif;
     color: #585a61;
+    background:#F8F3F0;
 }
 
 a {
@@ -25,16 +26,16 @@ a {
 @media only screen and (max-width: 600px) {
     .tagLine {
         color: #F8F3F0 !important;
-        font-weight: lighter;
-        font-size: 16px;
+        /* font-weight: lighter; */
+        font-size: 12px;
     }
 }
 
 @media only screen and (min-width: 600px) {
     .tagLine {
         color: #5F2224 !important;
-        font-weight: lighter;
-        font-size: 16px;
+        /* font-weight: lighter; */
+        font-size: 12px;
     }
 }
 
@@ -149,7 +150,7 @@ h6 {
     z-index: 997;
     transition: all 0.5s;
     padding: 15px 0;
-    background: rgba(255, 255, 255, 0.95);
+    background: #F8F3F0;
 }
 
 #header.header-transparent {
@@ -157,7 +158,7 @@ h6 {
 }
 
 #header.header-scrolled {
-    background: rgba(255, 255, 255, 0.95);
+    background: #F8F3F0;
     box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
 }
 
@@ -446,7 +447,7 @@ h6 {
     width: 250%;
     height: 200%;
     z-index: -1;
-    background-color: #5F2224;
+    background-color: #5F2224 !important;
     transform: skewY(135deg);
 }
 
