--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,6 +40,15 @@ background-color: #5F2224 !important;
     font-size:14px;
 }
 
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999 !important;
+  background-color: #cccccc !important;
+  color: #666666 !important;
+}
+
+
+
 a {
     color: #5F2224;
     text-decoration: none;
